# Master_algorithm

./: CMakeLists.txt  README.md  all_plots.ipynb  helpers.hpp  main.cpp  testing.hpp
source/ChebyshevSeries/: ChebyshevOperatorFinite.hpp  ChebyshevOperatorFinite.old.old.old.tpp  ChebyshevOperatorFinite.old.tpp  ChebyshevOperatorFinite.tpp  ChebyshevOperatorFiniteCopFor2Variables.tpp  ChebyshevOperatorInfinite.hpp  ChebyshevOperatorInfinite.tpp  ChebyshevSeries.hpp  ChebyshevSeries.tpp  Lorenz.txt  Norm.hpp  RadiiPolynomials.hpp  RadiiPolynomials.tpp  VanDerPol.txt  norm.hpp  norm.tpp
